--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,6 +108,9 @@
     <string name="textNull"></string>
     <string name="textNoData">-</string>
 
+    <string name="alertSignOutTitle">¿Quieres cerrar sesión?</string>
+    <string name="alertSignOutTDescription">Puedes volver cuando lo desees :)</string>
+
     <string name="medalDistanceDescription">Distancia [Record Personal]</string>
     <string name="medalAvgSpeedDescription">Vel. Máx. [Record Personal]</string>
     <string name="medalMaxSpeedDescription">Vel. Prom. [Record Personal]</string>
@@ -117,12 +120,14 @@
     <string name="ignoreActivationGPS">Ignorar</string>
     <string name="aceptActivationGPS">Activar</string>
 
-    <string name="alertSignOutTitle">¿Quieres cerrar sesión?</string>
-    <string name="alertSignOutTDescription">Puedes volver cuando lo desees :)</string>
-
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBrps4GkvZdaeFMIBo6D4oTHk4mFMAagyo</string>
     <string name="alertClearPreferencesTitle">¿Quieres borrar tus preferencias de carrera?</string>
     <string name="alertClearPreferencesDescription">Borraremos los ajustes de volumen y carrera (modo y tiempo de intervalos) de tu útlima carrera, vamos que tampoco pasa na</string>
 
+    <string name="CardAvgSpeedTitle">VEL. PROM.</string>
+    <string name="CardMaxSpeedTitle">VEL. MAX</string>
+    <string name="CardMedalDistance">Kms. [RP]</string>
+    <string name="CardMedalAvgSpeed">V.Máx. [RP]</string>
+    <string name="CardMedalMaxSpeed">V.Pr. [RP]</string>
 
 </resources>
