--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,4 +130,7 @@
     <string name="CardMedalAvgSpeed">V.Máx. [RP]</string>
     <string name="CardMedalMaxSpeed">V.Pr. [RP]</string>
 
+    <string name="share">COMPARTIR</string>
+
+
 </resources>
